[gd_scene load_steps=19 format=2]

[ext_resource path="res://Folders/Menu/Scripts Menu/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Arcane Nine.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.223529, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.14902, 0, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.223529, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.14902, 0, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.223529, 0.431373, 0.627451 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.780392 )

[node name="GameOverMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
margin_left = 368.0
margin_top = 240.0
margin_right = 656.0
margin_bottom = 389.0
alignment = 1

[node name="Retry" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 288.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
text = "REINICIAR"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 51.0
margin_right = 288.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 12 )
text = "VOLVER AL MENU"

[node name="Quit" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 102.0
margin_right = 288.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 13 )
text = "SALIR"

[node name="GameOver" type="Label" parent="."]
pause_mode = 2
margin_left = 323.5
margin_top = 125.0
margin_right = 700.5
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 14 )
text = "GAME OVER"
align = 1

[node name="Score" type="Label" parent="."]
pause_mode = 2
margin_left = 521.0
margin_top = 214.0
margin_right = 651.0
margin_bottom = 232.0
custom_styles/normal = SubResource( 15 )
align = 1
valign = 1

[node name="Time" type="Label" parent="."]
pause_mode = 2
margin_left = 374.0
margin_top = 214.0
margin_right = 504.0
margin_bottom = 232.0
custom_styles/normal = SubResource( 16 )
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
